SERVER-82979 Resolve inconsistency in ABT and SBE assumptions for duplicate predicates in $or