src/mongo/db/query/optimizer/utils/unit_test_pipeline_utils.cpp
@@ -117,6 +117,7 @@ ABT translatePipeline(const Metadata& metadata,
                       pipelineStr,
                       *opCtx,
                       involvedNss);
+    pipeline->optimizePipeline();
     if (parameterized)
         MatchExpression::parameterize(
             dynamic_cast<DocumentSourceMatch*>(pipeline.get()->peekFront())->getMatchExpression());
